--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,7 +8,9 @@
 
     {% include header.html %}
 
+    <div class="page-content-container">
     {{ content }}
+    </div>
 
     {% include footer.html %}
 
