--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -2,7 +2,11 @@
 $accent-color: #428bca;
 
 .personal-image {
-  //@include border-radius(50%);
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  border-radius: 50%;
 
   background-color:rgba(66,139,202,0.2);
   margin-bottom: 10px;
@@ -33,6 +37,10 @@ body {
     font-size: 18px;
     margin-bottom: 10px;
   }
+}
+
+.page-content-container {
+  margin-top: 30px;
 }
 
 .section-text {
@@ -122,7 +130,11 @@ body {
 }
 
 .personal-image-small {
-  //@include border-radius(50%);
+  -webkit-border-radius: 50%;
+  -moz-border-radius: 50%;
+  -ms-border-radius: 50%;
+  -o-border-radius: 50%;
+  border-radius: 50%;
 
   background-color:rgba(66,139,202,0.2);
   margin: 2px;
@@ -134,7 +146,7 @@ body {
 .header-name {
   color: white;
   font-size: 32px;
-  font-family: 'Ubuntu Condensed', sans-serif;
+  font-family: Tahoma, Geneva, sans-serif;
   margin-left: 15px;
   margin-right: 15px;
 }
